--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>Open the console to see the magic</div>
+    <h1> Matt's Bike Shop </h1>
+    <h3> We specialize in selling bikes and bike gear! </h3>
     <script src="app.js"></script>
 </body>
 </html>
