--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="header">
+        <a href="#default" class="logo">CompanyLogo</a>
+        <div class="header-right">
+          <a class="active" href="#home">Home</a>
+          <a href="#products">Products</a>
+          <a href="#map">Map</a>
+        </div>
+    </div>
+
     <h1> Matt's Bike Shop </h1>
     <h3> We specialize in selling bikes and bike gear! </h3>
+
     <script src="app.js"></script>
 </body>
 </html>
