--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title> Matt's Bike Shop </title>
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
 
-    <div class="header">
-        <a href="#default" class="logo">CompanyLogo</a>
-        <div class="header-right">
-          <a class="active" href="#home">Home</a>
-          <a href="#products">Products</a>
-          <a href="#map">Map</a>
+    <div class = "header">
+        <a href = "#default" class = "logo"> Matt's Bike Shop </a>
+    
+        <div class = "header-right">
+          <a class = "active" href = "#home"> Home </a>
+          <a href = "#products"> Products </a>
+          <a href = "#map"> Map </a>
         </div>
     </div>
 
-    <h1> Matt's Bike Shop </h1>
-    <h3> We specialize in selling bikes and bike gear! </h3>
 
-    <script src="app.js"></script>
+    <script src = "app.js"></script>
 </body>
 </html>
