--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 
     <div class = "header">
-        <a href = "#default" class = "logo"> Matt's Bike Shop </a>
+        <a class = "logo" href = "./index.html"> Matt's Bike Shop </a>
     
         <div class = "header-right">
-          <a class = "active" href = "#home"> Home </a>
+          <a class = "active" href = "./index.html"> Home </a>
           <a href = "#products"> Products </a>
           <a href = "#map"> Map </a>
         </div>
