can go between products and home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
         <div class = "header-right">
           <a class = "active" href = "./index.html"> Home </a>
-          <a href = "#products"> Products </a>
+          <a href = "./products/products.html"> Products </a>
           <a href = "#map"> Map </a>
         </div>
     </div>
