--- a/products/products.html
+++ b/products/products.html
@@ -21,6 +21,125 @@
 
     <h1> Products </h1>
 
+    <section>
+        <div class="row">
+   
+         <section>
+             <div class="column">
+              <div class="card">
+               <img src="" alt="bike" style="width:100%">
+               <h4> bike </h4>
+               <p class="price">$</p>
+               <p><button>Add to Cart</button></p>
+             </div>
+            </div>
+         </section>
+   
+         <section>
+            <div class="column">
+                <div class="card">
+                 <img src="" alt="bike" style="width:100%">
+                 <h4> bike </h4>
+                 <p class="price">$</p>
+                 <p><button>Add to Cart</button></p>
+               </div>
+              </div>
+         </section>
+   
+         <section>
+            <div class="column">
+                <div class="card">
+                 <img src="" alt="bike" style="width:100%">
+                 <h4> bike </h4>
+                 <p class="price">$</p>
+                 <p><button>Add to Cart</button></p>
+               </div>
+              </div>
+         </section>
+       </section>
+   
+     <br/>
+   
+      <section>
+        <div class="row">
+   
+         <section>
+            <div class="column">
+                <div class="card">
+                 <img src="" alt="bike" style="width:100%">
+                 <h4> bike </h4>
+                 <p class="price">$</p>
+                 <p><button>Add to Cart</button></p>
+               </div>
+              </div>
+         </section>
+   
+         <section>
+            <div class="column">
+                <div class="card">
+                 <img src="" alt="bike" style="width:100%">
+                 <h4> bike </h4>
+                 <p class="price">$</p>
+                 <p><button>Add to Cart</button></p>
+               </div>
+              </div>
+         </section>
+   
+         <section>
+            <div class="column">
+                <div class="card">
+                 <img src="" alt="bike" style="width:100%">
+                 <h4> bike </h4>
+                 <p class="price">$</p>
+                 <p><button>Add to Cart</button></p>
+               </div>
+              </div>
+         </section>
+   
+       </section>
+   
+       <section>
+        <div class="row">
+   
+         <section>
+            <div class="column">
+                <div class="card">
+                 <img src="" alt="bike" style="width:100%">
+                 <h4> bike </h4>
+                 <p class="price">$</p>
+                 <p><button>Add to Cart</button></p>
+               </div>
+              </div>
+         </section>
+   
+         <section>
+            <div class="column">
+                <div class="card">
+                 <img src="" alt="bike" style="width:100%">
+                 <h4> bike </h4>
+                 <p class="price">$</p>
+                 <p><button>Add to Cart</button></p>
+               </div>
+              </div>
+         </section>
+   
+         <section>
+           <div class="column">
+             <div class="card">
+               <img src="" alt="wood-phone-case" style="width:100%">
+               <h4>Wood Phone Case</h4>
+               <p class="price"> $15.99</p>
+               <p> availble in colors
+                 <br/>
+                 Able to offroad, etc
+               </p>
+               <br/>
+               <p><button>Add to Cart</button></p>
+             </div>
+           </div>
+         </section>
+       </section>
+
     <footer>
         <div class="Footer">
         <div class="Left">
