--- a/index.html
+++ b/index.html
@@ -2,10 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    cdjcdskjcnsjkdnckjsd
+    <link href="style.css" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
 
+<div class="container">
+    <header>
+        <div class="wrapper">
+            <div class="logo">
+                <img onclick="window.location.href='https://www.goldendoorscholars.org/'" src="https://media-exp1.licdn.com/dms/image/C4E0BAQEjLLVRGq-P2A/company-logo_200_200/0/1560451399036?e=1664409600&v=beta&t=tmpOEtAjMEkJrfSmxXVFV8PY1UKHHmFR2ty3WmUuzr8" alt="logo" />
+            </div>
+            <nav>
+
+
+                <a href = index.html >Home</a>
+                <a href= map.html>Map</a>
+
+
+            </nav>
+        </div>
+    </header>
+
+
+    <h3> Contact Us </h3>
+    <section class="box">
+        <form class="contact-form" action="https://www.youtube.com/watch?v=dQw4w9WgXcQ" method="post" >
+            <input name="name" class="contact-form" placeholder="Your name" required/>
+            <br/>
+            <input name="email" class="contact-form" placeholder="Your email" required/>
+            <br/>
+            <input name="number" class="contact-form" placeholder="Date" required/>
+            <br>
+
+            <input  type="submit" value="Submit" id="SubmitYes" />
+            <br/>
+
+
+        </form>
+    </section>
+</div>
 </body>
 </html>
