working on products page

--- a/products/products.html
+++ b/products/products.html
@@ -27,9 +27,9 @@
          <section>
              <div class="column">
               <div class="card">
-               <img src="" alt="bike" style="width:100%">
-               <h4> bike </h4>
-               <p class="price">$</p>
+               <img src="https://cdn.shoplightspeed.com/shops/609665/files/46327595/660x660x1/all-city-all-city-space-horse-58-mint-tiagra.jpg" alt="bike" style="width:100%">
+               <h4> All-City Space Horse 58 Mint Tiagra </h4>
+               <p class="price">$2012.00</p>
                <p><button>Add to Cart</button></p>
              </div>
             </div>
@@ -38,9 +38,9 @@
          <section>
             <div class="column">
                 <div class="card">
-                 <img src="" alt="bike" style="width:100%">
-                 <h4> bike </h4>
-                 <p class="price">$</p>
+                 <img src="https://cdn.shoplightspeed.com/shops/609665/files/41681378/660x660x1/bianchi-cortina.jpg" alt="bike" style="width:100%">
+                 <h4> Bianchi Cortina </h4>
+                 <p class="price">$860.00</p>
                  <p><button>Add to Cart</button></p>
                </div>
               </div>
@@ -49,9 +49,9 @@
          <section>
             <div class="column">
                 <div class="card">
-                 <img src="" alt="bike" style="width:100%">
-                 <h4> bike </h4>
-                 <p class="price">$</p>
+                 <img src="https://cdn.shoplightspeed.com/shops/609665/files/42351926/660x660x1/jamis-bike-jamis-dxt-a1.jpg" alt="bike" style="width:100%">
+                 <h4> Bike Jamis DXT A1 </h4>
+                 <p class="price">$1020.00</p>
                  <p><button>Add to Cart</button></p>
                </div>
               </div>
@@ -66,9 +66,20 @@
          <section>
             <div class="column">
                 <div class="card">
-                 <img src="" alt="bike" style="width:100%">
-                 <h4> bike </h4>
-                 <p class="price">$</p>
+                 <img src="https://cdn.shoplightspeed.com/shops/609665/files/42764891/660x660x1/kona-bicycle-company-bike-kona-lanai-1.jpg" alt="bike" style="width:100%">
+                 <h4> Bike Kona Lana'i </h4>
+                 <p class="price">$850.00</p>
+                 <p><button>Add to Cart</button></p>
+               </div>
+              </div>
+         </section>
+   
+         <section>
+            <div class="column">
+                <div class="card">
+                 <img src="https://cdn.shoplightspeed.com/shops/609665/files/27224278/660x660x1/cannondale-cdale-quick-6.jpg" alt="bike" style="width:100%">
+                 <h4> C'Dale Quick 6 </h4>
+                 <p class="price">$720.00</p>
                  <p><button>Add to Cart</button></p>
                </div>
               </div>
@@ -84,18 +95,7 @@
                </div>
               </div>
          </section>
-   
-         <section>
-            <div class="column">
-                <div class="card">
-                 <img src="" alt="bike" style="width:100%">
-                 <h4> bike </h4>
-                 <p class="price">$</p>
-                 <p><button>Add to Cart</button></p>
-               </div>
-              </div>
-         </section>
-   
+
        </section>
    
        <section>
@@ -124,20 +124,147 @@
          </section>
    
          <section>
-           <div class="column">
-             <div class="card">
-               <img src="" alt="wood-phone-case" style="width:100%">
-               <h4>Wood Phone Case</h4>
-               <p class="price"> $15.99</p>
-               <p> availble in colors
-                 <br/>
-                 Able to offroad, etc
-               </p>
-               <br/>
+          <div class="column">
+              <div class="card">
+               <img src="" alt="bike" style="width:100%">
+               <h4> bike </h4>
+               <p class="price">$</p>
                <p><button>Add to Cart</button></p>
              </div>
-           </div>
-         </section>
+            </div>
+        </section>
+
+        <section>
+          <div class="column">
+              <div class="card">
+               <img src="" alt="bike" style="width:100%">
+               <h4> bike </h4>
+               <p class="price">$</p>
+               <p><button>Add to Cart</button></p>
+             </div>
+            </div>
+        </section>
+
+        <section>
+          <div class="column">
+              <div class="card">
+               <img src="" alt="bike" style="width:100%">
+               <h4> bike </h4>
+               <p class="price">$</p>
+               <p><button>Add to Cart</button></p>
+             </div>
+            </div>
+        </section>
+
+        <section>
+          <div class="column">
+              <div class="card">
+               <img src="" alt="bike" style="width:100%">
+               <h4> bike </h4>
+               <p class="price">$</p>
+               <p><button>Add to Cart</button></p>
+             </div>
+            </div>
+        </section>
+
+        <section>
+          <div class="column">
+              <div class="card">
+               <img src="" alt="bike" style="width:100%">
+               <h4> bike </h4>
+               <p class="price">$</p>
+               <p><button>Add to Cart</button></p>
+             </div>
+            </div>
+        </section>
+
+        <section>
+          <div class="column">
+              <div class="card">
+               <img src="" alt="bike" style="width:100%">
+               <h4> bike </h4>
+               <p class="price">$</p>
+               <p><button>Add to Cart</button></p>
+             </div>
+            </div>
+        </section>
+
+        <section>
+          <div class="column">
+              <div class="card">
+               <img src="" alt="bike" style="width:100%">
+               <h4> bike </h4>
+               <p class="price">$</p>
+               <p><button>Add to Cart</button></p>
+             </div>
+            </div>
+        </section>
+
+        <section>
+          <div class="column">
+              <div class="card">
+               <img src="" alt="bike" style="width:100%">
+               <h4> bike </h4>
+               <p class="price">$</p>
+               <p><button>Add to Cart</button></p>
+             </div>
+            </div>
+        </section>
+
+        <section>
+          <div class="column">
+              <div class="card">
+               <img src="" alt="bike" style="width:100%">
+               <h4> bike </h4>
+               <p class="price">$</p>
+               <p><button>Add to Cart</button></p>
+             </div>
+            </div>
+        </section>
+
+        <section>
+          <div class="column">
+              <div class="card">
+               <img src="" alt="bike" style="width:100%">
+               <h4> bike </h4>
+               <p class="price">$</p>
+               <p><button>Add to Cart</button></p>
+             </div>
+            </div>
+        </section>
+
+        <section>
+          <div class="column">
+              <div class="card">
+               <img src="" alt="bike" style="width:100%">
+               <h4> bike </h4>
+               <p class="price">$</p>
+               <p><button>Add to Cart</button></p>
+             </div>
+            </div>
+        </section>
+
+        <section>
+          <div class="column">
+              <div class="card">
+               <img src="" alt="bike" style="width:100%">
+               <h4> bike </h4>
+               <p class="price">$</p>
+               <p><button>Add to Cart</button></p>
+             </div>
+            </div>
+        </section>
+
+        <section>
+          <div class="column">
+              <div class="card">
+               <img src="" alt="bike" style="width:100%">
+               <h4> bike </h4>
+               <p class="price">$</p>
+               <p><button>Add to Cart</button></p>
+             </div>
+            </div>
+        </section>
        </section>
 
     <footer>
