--- a/products/products.html
+++ b/products/products.html
@@ -58,8 +58,6 @@
          </section>
        </section>
    
-     <br/>
-   
       <section>
         <div class="row">
    
@@ -88,14 +86,13 @@
          <section>
             <div class="column">
                 <div class="card">
-                 <img src="" alt="bike" style="width:100%">
-                 <h4> bike </h4>
-                 <p class="price">$</p>
+                 <img src="https://cdn.shoplightspeed.com/shops/609665/files/41549418/660x660x1/cannondale-cannondale-quick-disc-5-remixte.jpg" alt="bike" style="width:100%">
+                 <h4> Cannondale Quick Disc 5 Remixte </h4>
+                 <p class="price">$775.00</p>
                  <p><button>Add to Cart</button></p>
                </div>
               </div>
          </section>
-
        </section>
    
        <section>
@@ -104,9 +101,9 @@
          <section>
             <div class="column">
                 <div class="card">
-                 <img src="" alt="bike" style="width:100%">
-                 <h4> bike </h4>
-                 <p class="price">$</p>
+                 <img src="https://cdn.shoplightspeed.com/shops/609665/files/41680799/660x660x1/cannondale-cannondale-treadwell-2-remixte.jpg" alt="bike" style="width:100%">
+                 <h4> Cannondale Treadwell 2 Remixte </h4>
+                 <p class="price">$1010.00</p>
                  <p><button>Add to Cart</button></p>
                </div>
               </div>
@@ -115,9 +112,9 @@
          <section>
             <div class="column">
                 <div class="card">
-                 <img src="" alt="bike" style="width:100%">
-                 <h4> bike </h4>
-                 <p class="price">$</p>
+                 <img src="https://cdn.shoplightspeed.com/shops/609665/files/41432528/660x660x1/fyxation-pixel-3-step-thru.jpg" alt="bike" style="width:100%">
+                 <h4> Fyxation Pixel 3 Step-Thru</h4>
+                 <p class="price">$590.00</p>
                  <p><button>Add to Cart</button></p>
                </div>
               </div>
@@ -126,9 +123,9 @@
          <section>
           <div class="column">
               <div class="card">
-               <img src="" alt="bike" style="width:100%">
-               <h4> bike </h4>
-               <p class="price">$</p>
+               <img src="https://cdn.shoplightspeed.com/shops/609665/files/27258403/660x660x1/fyxation-pixel-7-speed-1.jpg" alt="bike" style="width:100%">
+               <h4> Fryxation Pixel 7 Speed </h4>
+               <p class="price">$520.00</p>
                <p><button>Add to Cart</button></p>
              </div>
             </div>
@@ -137,9 +134,9 @@
         <section>
           <div class="column">
               <div class="card">
-               <img src="" alt="bike" style="width:100%">
-               <h4> bike </h4>
-               <p class="price">$</p>
+               <img src="https://cdn.shoplightspeed.com/shops/609665/files/42906710/660x660x1/fyxation-quiver-arc-1.jpg" alt="bike" style="width:100%">
+               <h4> Fryxation Quiver ARC </h4>
+               <p class="price">$1140.00</p>
                <p><button>Add to Cart</button></p>
              </div>
             </div>
@@ -148,9 +145,9 @@
         <section>
           <div class="column">
               <div class="card">
-               <img src="" alt="bike" style="width:100%">
-               <h4> bike </h4>
-               <p class="price">$</p>
+               <img src="https://cdn.shoplightspeed.com/shops/609665/files/28101418/660x660x1/fyxation-third-ward-1.jpg" alt="bike" style="width:100%">
+               <h4> Fryxation Third Ward </h4>
+               <p class="price">$599.00</p>
                <p><button>Add to Cart</button></p>
              </div>
             </div>
@@ -159,9 +156,9 @@
         <section>
           <div class="column">
               <div class="card">
-               <img src="" alt="bike" style="width:100%">
-               <h4> bike </h4>
-               <p class="price">$</p>
+               <img src="https://cdn.shoplightspeed.com/shops/609665/files/42906409/660x660x1/fyxation-urbex-1.jpg" alt="bike" style="width:100%">
+               <h4> Fryxation Urbex </h4>
+               <p class="price">$690.00</p>
                <p><button>Add to Cart</button></p>
              </div>
             </div>
@@ -170,9 +167,9 @@
         <section>
           <div class="column">
               <div class="card">
-               <img src="" alt="bike" style="width:100%">
-               <h4> bike </h4>
-               <p class="price">$</p>
+               <img src="https://cdn.shoplightspeed.com/shops/609665/files/42350121/660x660x1/jamis-jamis-citizen.jpg" alt="bike" style="width:100%">
+               <h4> Jamis Citizen </h4>
+               <p class="price">$540.00</p>
                <p><button>Add to Cart</button></p>
              </div>
             </div>
@@ -181,9 +178,9 @@
         <section>
           <div class="column">
               <div class="card">
-               <img src="" alt="bike" style="width:100%">
-               <h4> bike </h4>
-               <p class="price">$</p>
+               <img src="https://cdn.shoplightspeed.com/shops/609665/files/42351428/660x660x1/jamis-jamis-citizen-1-step-thru.jpg" alt="bike" style="width:100%">
+               <h4> Jamis Citizen 1 Step-Thru </h4>
+               <p class="price">$600.00</p>
                <p><button>Add to Cart</button></p>
              </div>
             </div>
@@ -192,9 +189,9 @@
         <section>
           <div class="column">
               <div class="card">
-               <img src="" alt="bike" style="width:100%">
-               <h4> bike </h4>
-               <p class="price">$</p>
+               <img src="https://cdn.shoplightspeed.com/shops/609665/files/42348748/660x660x1/jamis-jamis-citizen-2.jpg" alt="bike" style="width:100%">
+               <h4> Jamis Citizen 2 </h4>
+               <p class="price">$700.00</p>
                <p><button>Add to Cart</button></p>
              </div>
             </div>
@@ -203,9 +200,9 @@
         <section>
           <div class="column">
               <div class="card">
-               <img src="" alt="bike" style="width:100%">
-               <h4> bike </h4>
-               <p class="price">$</p>
+               <img src="https://cdn.shoplightspeed.com/shops/609665/files/42350969/660x660x1/jamis-jamis-citizen-step-thru-1.jpg" alt="bike" style="width:100%">
+               <h4> Jamis Citizen Step Thru </h4>
+               <p class="price">$540.00</p>
                <p><button>Add to Cart</button></p>
              </div>
             </div>
@@ -214,9 +211,9 @@
         <section>
           <div class="column">
               <div class="card">
-               <img src="" alt="bike" style="width:100%">
-               <h4> bike </h4>
-               <p class="price">$</p>
+               <img src="https://cdn.shoplightspeed.com/shops/609665/files/41545873/660x660x1/kona-bicycle-company-kona-dew-2022-1.jpg" alt="bike" style="width:100%">
+               <h4> Kona Dew 2022 </h4>
+               <p class="price">$840.00</p>
                <p><button>Add to Cart</button></p>
              </div>
             </div>
@@ -225,9 +222,9 @@
         <section>
           <div class="column">
               <div class="card">
-               <img src="" alt="bike" style="width:100%">
-               <h4> bike </h4>
-               <p class="price">$</p>
+               <img src="https://cdn.shoplightspeed.com/shops/609665/files/42770609/660x660x1/kona-bicycle-company-kona-fire-mountain-2022-1.jpg" alt="bike" style="width:100%">
+               <h4> Kona Fire Mountain 2022 </h4>
+               <p class="price">$915.00</p>
                <p><button>Add to Cart</button></p>
              </div>
             </div>
