product page filled w/ bikes, shoes, and helmets

--- a/products/products.html
+++ b/products/products.html
@@ -233,9 +233,9 @@
         <section>
           <div class="column">
               <div class="card">
-               <img src="" alt="bike" style="width:100%">
-               <h4> bike </h4>
-               <p class="price">$</p>
+               <img src="https://cdn.shoplightspeed.com/shops/609665/files/14027692/660x660x1/specialized-sport-mtb-shoe-1.jpg" alt="bike" style="width:100%">
+               <h4> Sport MTB Cycling Shoe </h4>
+               <p class="price">$100.00</p>
                <p><button>Add to Cart</button></p>
              </div>
             </div>
@@ -244,9 +244,9 @@
         <section>
           <div class="column">
               <div class="card">
-               <img src="" alt="bike" style="width:100%">
-               <h4> bike </h4>
-               <p class="price">$</p>
+               <img src="https://cdn.shoplightspeed.com/shops/609665/files/27904093/660x660x1/bern-fl-1-pave-1.jpg" alt="bike" style="width:100%">
+               <h4> Bern FL-1 Pave Helmet </h4>
+               <p class="price">$100.00</p>
                <p><button>Add to Cart</button></p>
              </div>
             </div>
@@ -255,9 +255,9 @@
         <section>
           <div class="column">
               <div class="card">
-               <img src="" alt="bike" style="width:100%">
-               <h4> bike </h4>
-               <p class="price">$</p>
+               <img src="https://cdn.shoplightspeed.com/shops/609665/files/27918553/660x660x1/specialized-mio-helmet-with-mips-1.jpg" alt="bike" style="width:100%">
+               <h4> Specialized Mio Helmet with MIPS </h4>
+               <p class="price">$60.00</p>
                <p><button>Add to Cart</button></p>
              </div>
             </div>
