--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
                   </div>
                   <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
                       <p class="copyright">Matt's Bike Shop  © 2022</p>
+                      <p class="copyright">Charlie An, Rhodes College '24</p>
+                      <p class="copyright">Humberto Aguilar, Kennesaw State '24</p>
                   </div>
               </div>
           </div>
