products on home

--- a/index.html
+++ b/index.html
@@ -62,22 +62,19 @@
     <br>
     <br>
     <br>
+    <h2> Check Out Our Products Page! </h2>
+    <h3> For a Limited Time Only, 15% Off Your Next Purchase! </h3>
+    <br>
+    <br>
+    <div class = "productsButton">
+        <form action="./products/products.html">
+            <button type="submit"> Products! </button>
+         </form>
+    </div>
     <br>
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-
-
 
     <div class="footer-clean">
       <footer>
