--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <br>
     <br>
     <br>
-    <h2> Check Out Our Products Page! </h2>
+    <h2> Check Out Our Amazing Products! </h2>
     <h3> For a Limited Time Only, 15% Off Your Next Purchase! </h3>
     <br>
     <br>
@@ -83,7 +83,7 @@
                   <div class="col-sm-4 col-md-3 item">
                       <h3>Services</h3>
                       <ul>
-                          <li><a href="#">Web design</a></li>
+                          <li><a href="#">Web Design</a></li>
                           <li><a href="#">Development</a></li>
                           <li><a href="#">Hosting</a></li>
                       </ul>
@@ -99,8 +99,8 @@
                   <div class="col-sm-4 col-md-3 item">
                       <h3>Careers</h3>
                       <ul>
-                          <li><a href="#">Job openings</a></li>
-                          <li><a href="#">Employee success</a></li>
+                          <li><a href="#">Job Openings</a></li>
+                          <li><a href="#">Employee Success</a></li>
                           <li><a href="#">Benefits</a></li>
                       </ul>
                   </div>
