--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </head>
   <body>
     <div id="container">
-      <div id="map"></div>
+      <<div id="map"></div>
+      <!-- add review section here -->
+       <div id="reviews"></div>
       <div id="sidebar">
         <h2>Results</h2>
         <ul id="places"></ul>
