--- a/products/products.html
+++ b/products/products.html
@@ -11,10 +11,10 @@
 <body>
 
     <div class = "header">
-        <a class = "logo" href = "../index.html"> Matt's Bike Shop </a>
+        <a class = "logo" href = "../indexMap.html"> Matt's Bike Shop </a>
     
         <div class = "header-right">
-          <a class = "active" href = "../index.html"> Home </a>
+          <a class = "active" href = "../indexMap.html"> Home </a>
           <a href = "./products.html"> Products </a>
           <a href = "#map"> Map </a>
         </div>
