fixed html and added map

--- a/indexMap.html
+++ b/indexMap.html
@@ -7,6 +7,10 @@
 
 <html>
   <head>
+    <meta charset="UTF-8">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Place Search Pagination</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
@@ -25,12 +29,6 @@
       </div>
     </div>
 
-    <!-- 
-     The `defer` attribute causes the callback to execute after the full HTML
-     document has been parsed. For non-blocking uses, avoiding race conditions,
-     and consistent behavior across browsers, consider loading using Promises
-     with https://www.npmjs.com/package/@googlemaps/js-api-loader.
-    -->
     <script
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM6d8UVp0Woll2rSromBDfOVuHrSCp8-A&libraries=places&callback=initMap"
             defer
