--- a/products/products.html
+++ b/products/products.html
@@ -11,12 +11,12 @@
 <body>
 
     <div class = "header">
-        <a class = "logo" href = "../indexMap.html"> Matt's Bike Shop </a>
+        <a class = "logo" href = "../index.html"> Matt's Bike Shop </a>
     
         <div class = "header-right">
-          <a class = "active" href = "../indexMap.html"> Home </a>
+          <a class = "active" href = "../index.html"> Home </a>
           <a href = "./products.html"> Products </a>
-          <a href = "#map"> Map </a>
+          <a href = "../indexMap.html"> Map </a>
         </div>
     </div>
 
@@ -57,8 +57,10 @@
                </div>
               </div>
          </section>
+
+    </div>
        </section>
-   
+
       <section>
         <div class="row">
    
@@ -93,10 +95,12 @@
                  <p><button>Add to Cart</button></p>
                </div>
               </div>
+
          </section>
-       </section>
-   
+
+
        <section>
+
         <div class="row">
    
          <section>
@@ -263,10 +267,11 @@
              </div>
             </div>
         </section>
-       </section>
+
        <br>
 
     <script src = "app.js"></script>
+    </body>
 
-</body>
+
 </html>
